docs: 更新项目文档并修复前端应用生成逻辑
- 在 AGENTS.md 中添加 JDK 1.8 要求并补充后端构建命令
- 在 sandbox.html 和生成的应用 HTML 模板中添加 file-saver 库依赖
- 修复 Launchpad.vue、MarketLaunchpad.vue 和 MarketAppDetail.vue 中应用内容解析逻辑，支持字符串格式的 content
- 在 MarketAppDetail.vue 的预览中增加更多 dayjs 插件以增强日期功能
- 修复 MarketController.java 中 Map 构造方式以兼容 JDK 1.8